--- a/views/index.jade
+++ b/views/index.jade
@@ -1,24 +1,22 @@
 extends layout
-
 block content
-  h1= title
-   div.container
-        div.jumbotron
-          h1 Hello!
+  div.page-header
+    h1 Smart
+      b Guard
+      |  - WebControl
 
-          if user
-            p Welcome, #{user.fullName}
-            p
-              a.small(href="profile") Edit my profile
-            a.btn.btn-primary(href="/logout") Logout
-          else
-            p Welcome to my app, ready to get started?
-            p
-              a.btn.btn-primary(href="/login") Login now
-            p
-              span.small Don't have an account?
-              span &nbsp;
-              a.small(href="/register") Register now
-              span &nbsp;
-              a.small(href="/profile") View Profile
-
+  if user
+    p Welcome, #{user.fullName}
+    p
+      a.small(href="profile") Edit my profile
+    a.btn.btn-primary(href="/logout") Logout
+  else
+    p Welcome to my app, ready to get started?
+    p
+      a.btn.btn-primary(href="/login") Login now
+    p
+      span.small Don't have an account?
+      span &nbsp;
+      a.small(href="/register") Register now
+      span &nbsp;
+      a.small(href="/profile") View Profile
