--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,79 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', rel='stylesheet')
-  body
-    block content
+html(lang='en')
+    head
+        meta(charset='utf-8')
+        meta(http-equiv='X-UA-Compatible', content='IE=edge')
+        meta(name='viewport', content='width=device-width, initial-scale=1')
+        meta(name='description', content='')
+        meta(name='author', content='BlueDrop')
+        // link(rel='icon', href='#{pathToAssets}/docs/favicon.ico')
+        title=title
+        // Bootstrap core CSS
+        link(href='css/bootstrap.min.css', rel='stylesheet')
+        link(href='css/font-awesome.min.css', rel='stylesheet')
+        // Custom styles for this template
+        // link(href='#{pathToSelectedTemplateWithinBootstrap}/navbar-fixed-top.css', rel='stylesheet')
+        // Just for debugging purposes. Don't actually copy these 2 lines!
+        //if lt IE 9
+        // script(src='//html5shim.googlecode.com/svn/trunk/html5.js')
+        // script(src='#{pathToAssets}/docs/assets/js/ie-emulation-modes-warning.js')
+        // IE10 viewport hack for Surface/desktop Windows 8 bug
+        // script(src='#{pathToAssets}/docs/assets/js/ie10-viewport-bug-workaround.js')
+        // HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
+        //if lt IE 9
+        // script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
+        script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
+        link(href='css/styles.css', rel='stylesheet')
+    body
+        // Fixed navbar
+        .navbar.navbar-trans.navbar-fixed-top(role='navigation')
+            .container
+                .navbar-header
+                    button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+                        span.sr-only Toggle navigation
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a.navbar-brand(href='/#') Smart
+                        b Guard
+                .navbar-collapse.collapse
+                    ul.nav.navbar-nav.navbar-left
+                        li.active
+                            a(href='profile') Profile
+                        li
+                            a(href='#about') About
+                        li
+                            a(href='#contact') Contact
+                        // li.dropdown
+                            a.dropdown-toggle(href='#', data-toggle='dropdown')
+                                | Dropdown
+                                span.caret
+                            ul.dropdown-menu(role='menu')
+                                li
+                                    a(href='#') Action
+                                li
+                                    a(href='#') Another action
+                                li
+                                    a(href='#') Something else here
+                                li.divider
+                                li.dropdown-header Nav header
+                                li
+                                    a(href='#') Separated link
+                                li
+                                    a(href='#') One more separated link
+                    ul.nav.navbar-nav.navbar-right
+                        li
+                            a(href='/camera', title='Camera').fa.fa-camera
+                        li
+                            a(href='/hue', title='HUE Lights').fa.fa-lightbulb-o
+                        li.active
+                            a(href='/logout', title='Logout').fa.fa-sign-out
+                // /.nav-collapse
+        .container
+           .jumbotron
+            block content
+        // Bootstrap core JavaScript
+        // ==================================================
+        // Placed at the end of the document so the pages load faster
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+        script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
