added ambilight support

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -53,6 +53,8 @@ html(lang='en')
                         li
                             a(href='/camera', title='Camera').fa.fa-camera
                         li
+                            a(href='/ambilight', title='Philips TV').fa.fa-desktop
+                        li
                             a(href='/hue', title='HUE Lights').fa.fa-lightbulb-o
                         li.active
                             a(href='/logout', title='Logout').fa.fa-sign-out
