--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,8 +9,10 @@ html(lang='en')
         // link(rel='icon', href='#{pathToAssets}/docs/favicon.ico')
         title=title
         // Bootstrap core CSS
-        link(href='css/bootstrap.min.css', rel='stylesheet')
-        link(href='css/font-awesome.min.css', rel='stylesheet')
+        link(href='bower_components/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+        link(href='bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.min.css', rel='stylesheet')
+        link(href='bower_components/font-awesome/css/font-awesome.min.css', rel='stylesheet')
+        link(href='bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css', rel='stylesheet')
         link(href='css/styles.css', rel='stylesheet')
     body
         // Fixed navbar
@@ -65,5 +67,8 @@ html(lang='en')
         // Bootstrap core JavaScript
         // ==================================================
         // Placed at the end of the document so the pages load faster
-        script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
-        script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
+        script(src='bower_components/jquery/dist/jquery.min.js')
+        script(src='bower_components/bootstrap/dist/js/bootstrap.min.js')
+        script(src='bower_components/bootstrap-switch/dist/js/bootstrap-switch.min.js')
+        script(src='bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js')
+        script(src='js/main.js')
